--- a/datamodels/2.x/itop-core-update/view/UpdateCoreFiles.html.twig
+++ b/datamodels/2.x/itop-core-update/view/UpdateCoreFiles.html.twig
@@ -3,7 +3,7 @@
 
 {% apply spaceless %}
 
-    {% UIContentBlock Standard {'sContainerClass':'ibo-update-core display_block display-files'} %}
+    {% UIContentBlock Standard {'aContainerClasses': []'ibo-update-core', 'display_block', 'display-files']} %}
 
         {% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:Progress'|dict_s, 'sId':'installation_progress'} %}
             {#  Todo 3.0 Add Progress bar UIBlock  #}
@@ -18,13 +18,13 @@
         {% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:Status'|dict_s} %}
             {% UIField Large {'sId':'new_version', 'sLabel':'iTopUpdate:UI:NewVersion'|dict_s, 'ValueId':'db-disk-space', 'IsHidden':true} %}{% EndUIField %}
             {% UIAlert ForInformation {'sId':'current_version', 'IsCollapsible':false, 'IsClosable':false} %}
-                {% UIContentBlock Standard {'sId':'current-version','sContainerClass':'ibo-update-core--current-version'} %}
+                {% UIContentBlock Standard {'sId':'current-version','aContainerClasses':['ibo-update-core--current-version']} %}
                     {{ sCurrentVersion }}
                 {% EndUIContentBlock %}
             {% EndUIAlert %}
 
             {% if bDoBackup %}
-                {% UIContentBlock Standard {'sId':'do_backup_done','sContainerClass':'ibo-update-core--backup-done', 'IsHidden':true} %}
+                {% UIContentBlock Standard {'sId':'do_backup_done','aContainerClasses':['ibo-update-core--backup-done'], 'IsHidden':true} %}
                     {% UIField Standard {'sLabel':'iTopUpdate:UI:WithDBBackup'|dict_s, 'sLayout':'large'} %}
                         {% UIAlert ForInformation {'sContent':sBackupFile} %}{% EndUIAlert %}
                     {% EndUIField %}
@@ -32,7 +32,7 @@
             {% endif %}
 
             {% if bDoFilesArchive %}
-                {% UIContentBlock Standard {'sId':'do_files_archive_done','sContainerClass':'ibo-update-core--archive-done', 'IsHidden':true} %}
+                {% UIContentBlock Standard {'sId':'do_files_archive_done','aContainerClasses':['ibo-update-core--archive-done'], 'IsHidden':true} %}
                     {% UIField Large {'sLabel':'iTopUpdate:UI:WithFilesBackup'|dict_s} %}{% EndUIField %}
                     {% UIAlert ForSuccess {'sContent':sItopArchive} %}{% EndUIAlert %}
                 {% EndUIContentBlock %}
@@ -42,7 +42,7 @@
         {% UIFieldSet Standard {'sLegend':''} %}
 
             {% UIAlert ForFailure {'sId':'setup_error_outer', 'sContent':'', 'IsCollapsible':false, 'IsClosable':false, 'IsHidden':true} %}
-                {% UIContentBlock Standard {'sId':'setup_error','sContainerClass':'ibo-update-core--error'} %}{% EndUIContentBlock %}
+                {% UIContentBlock Standard {'sId':'setup_error','aContainerClasses':['ibo-update-core--error']} %}{% EndUIContentBlock %}
                 {% if bDoFilesArchive %}
                     {{ 'iTopUpdate:UI:RestoreArchive'|dict_format(sItopArchive) }}
                 {% endif %}
@@ -52,7 +52,7 @@
                     {{ 'iTopUpdate:UI:MaintenanceModeActive'|dict_s }}
             {% EndUIAlert %}
 
-            {% UIContentBlock Standard {'sId':'run_setup','sContainerClass':'ibo-update-core--run-setup', 'IsHidden':true} %}
+            {% UIContentBlock Standard {'sId':'run_setup','aContainerClasses':['ibo-update-core--run-setup'], 'IsHidden':true} %}
                 {% UIForm Standard {'CSSClasses':'form-inline'} %}
                     {% UIInput ForHidden {'sName':'operation', 'sValue':'RunSetup'} %}
                     {% UIInput ForHidden {'sName':'authent', 'sValue':sSetupToken} %}
