--- a/templates/base/layouts/navigation-menu/layout.js.twig
+++ b/templates/base/layouts/navigation-menu/layout.js.twig
@@ -1,5 +1,6 @@
 $('#{{ oUIBlock.GetId() }}').navigation_menu({
     display_counts: {% if get_config_parameter('display_menus_count') %} true {% else %} false {% endif %}
+    {%if oUIBlock.GetOrgId()%}, org_id: {{ oUIBlock.GetOrgId()}} {% endif %}
 });
 
 $('#{{ oUIBlock.GetId() }}').navigation_menu('refreshCounts', null);
