--- a/templates/base/layouts/navigation-menu/layout.js.twig
+++ b/templates/base/layouts/navigation-menu/layout.js.twig
@@ -1,6 +1,6 @@
 $('#{{ oUIBlock.GetId() }}').navigation_menu({
     display_counts: {% if get_config_parameter('display_menus_count') %} true {% else %} false {% endif %},
-    org_id: {{ oUIBlock.GetOrgId()|json_encode }}
+    org_id: '{{ oUIBlock.GetOrgId() }}'
 });
 
 $('#{{ oUIBlock.GetId() }}').navigation_menu('refreshCounts', null);
