N°3649 - Activity panel: Continue improvement following the alpha feedbacks - Fix compose button visible when no editable caselog - Fix "states" filter visible on object with no state attribute - All tabs now have all the actions / filters - Initial active tab is now the first one (caselog or activity)

--- a/templates/base/layouts/activity-panel/print.html.twig
+++ b/templates/base/layouts/activity-panel/print.html.twig
@@ -19,7 +19,7 @@
 								</label>
 							{% endfor %}
 						{% endif %}
-						{% if oUIBlock.HasLifecycle() %}
+						{% if oUIBlock.HasStates() %}
 							<label class="ibo-activity-panel--tab-toolbar-action"
 							       data-tooltip-content="{{ 'UI:Layout:ActivityPanel:Tab:Activity:Toolbar:TransitionsFilter:Tooltip'|dict_s }}"
 							       data-role="ibo-activity-panel--activity-filter"
