--- a/datamodels/2.x/itop-core-update/view/ConfirmUpdate.html.twig
+++ b/datamodels/2.x/itop-core-update/view/ConfirmUpdate.html.twig
@@ -2,7 +2,7 @@
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
 
-{% UIContentBlock Standard {'aContainerClasses': [], 'ibo-update-core', 'display_block', 'display-files']} %}
+{% UIContentBlock Standard {'aContainerClasses': [], ['ibo-update-core', 'display_block', 'display-files']} %}
 
     {% if bSuccess %}
 
