Fix css file-input

--- a/css/backoffice/components/input/_input.scss
+++ b/css/backoffice/components/input/_input.scss
@@ -56,3 +56,7 @@ $ibo-field-validation: $ibo-color-red-700 !default;
 .ibo-field-validation{
 	color: $ibo-field-validation;
 }
+.file-input {
+	display:block;
+	position: relative;
+}
