--- a/templates/pages/backoffice/webpage/layout.html.twig
+++ b/templates/pages/backoffice/webpage/layout.html.twig
@@ -12,7 +12,7 @@
     {% endif %}
     <title>{{ aPage.sTitle }}</title>
     {% if aPage.sFaviconUrl is defined %}
-        <link rel="shortcut icon" href="{{ aPage.sFaviconUrl|add_itop_version }}">
+        <link rel="shortcut icon" href="{{ aPage.sFaviconUrl|raw|add_itop_version }}">
     {% endif %}
     <link rel="search" type="application/opensearchdescription+xml" title="iTop" href="{{ aPage.sAbsoluteUrlAppRoot }}pages/opensearch.xml.php">
 
@@ -22,7 +22,7 @@
     {% block iboPageCssFiles %}
 	    {% for aCssFileData in aPage.aCssFiles %}
 		    {% if aCssFileData['condition'] != '' %}<!--[if {{ aCssFileData['condition'] }}]>{% endif %}
-			<link type="text/css" href="{{ aCssFileData['link']|add_itop_version }}" rel="stylesheet">
+			<link type="text/css" href="{{ aCssFileData['link']|raw|add_itop_version }}" rel="stylesheet">
 			{% if aCssFileData['condition'] != '' %}<![endif]-->{% endif %}
 	    {% endfor %}
     {% endblock %}
@@ -62,7 +62,7 @@
 </script>
 {% block iboPageJsFiles %}
     {% for sJsFile in aPage.aJsFiles %}
-        <script type="text/javascript" src="{{ sJsFile|add_itop_version }}"></script>
+        <script type="text/javascript" src="{{ sJsFile|raw|add_itop_version }}"></script>
     {% endfor %}
 {% endblock %}
 
