--- a/templates/base/layouts/activity-panel/tab-toolbar/layout.html.twig
+++ b/templates/base/layouts/activity-panel/tab-toolbar/layout.html.twig
@@ -2,7 +2,7 @@
      data-role="ibo-activity-panel--tab-toolbar"
      data-tab-type="{% block bDataTabType %}{% endblock %}"
 	 {% block bExtraDataAttributes %}{% endblock %}>
-	{% block btabToolbarFirstRow %}
+	{% block bTabToolbarFirstRow %}
 		<div class="ibo-activity-panel--tab-toolbar-actions">
 			{% block bTabToolbarActions %}
 				<div class="ibo-activity-panel--tab-toolbar-left-actions">
@@ -17,22 +17,38 @@
 				</div>
 				<div class="ibo-activity-panel--tab-toolbar-middle-actions">
 					{% if oUIBlock.HasCaseLogTabs() %}
-						<label class="ibo-activity-panel--tab-toolbar-action"
+						<label class="ibo-activity-panel--tab-toolbar-action" data-role="ibo-activity-panel--tab-toolbar-action"
 						       data-tooltip-content="{{ 'UI:Layout:ActivityPanel:Tab:Activity:Toolbar:CaselogsFilter:Tooltip'|dict_s }}">
-							<input type="checkbox" name="caselogs" data-role="ibo-activity-panel--activity-filter" data-target-entry-types="caselog" checked>
+							<input type="checkbox" name="caselogs" data-role="ibo-activity-panel--filter" data-target-entry-types="caselog" {% if (aFilteredCaseLogsAttCodes is not defined) or (aFilteredCaseLogsAttCodes is empty) %}checked{% endif %}>
 							{{ 'UI:Layout:ActivityPanel:Tab:Activity:Toolbar:CaselogsFilter:Title'|dict_s }}
+							{% if oUIBlock.GetCaseLogTabs()|length > 0 %}
+								<a class="ibo-activity-panel--filter-options-toggler ibo-is-closed" data-role="ibo-activity-panel--filter-options-toggler" href="#">
+									<span class="fas fa-caret-up"></span>
+								</a>
+								<div class="ibo-activity-panel--filter-options" data-role="ibo-activity-panel--filter-options">
+									{% for sCaseLogAttCode, aCaseLogData in oUIBlock.GetCaseLogTabs() %}
+										<label class="ibo-activity-panel--filter-option" data-role="ibo-activity-panel--filter-option" title="{{ aCaseLogData['title'] }}">
+											<input type="checkbox" name="caselog" value="{{ sCaseLogAttCode }}"
+                                                   class="ibo-activity-panel--filter-option-input"
+                                                   data-role="ibo-activity-panel--filter-option-input"
+                                                   {% if (aFilteredCaseLogsAttCodes is not defined) or (sCaseLogAttCode in aFilteredCaseLogsAttCodes) %}checked{% endif %}>
+											{{ aCaseLogData['title'] }}
+										</label>
+									{% endfor %}
+								</div>
+							{% endif %}
 						</label>
 					{% endif %}
 					{% if oUIBlock.HasStates() %}
 						<label class="ibo-activity-panel--tab-toolbar-action"
 						       data-tooltip-content="{{ 'UI:Layout:ActivityPanel:Tab:Activity:Toolbar:TransitionsFilter:Tooltip'|dict_s }}">
-							<input type="checkbox" name="transitions" data-role="ibo-activity-panel--activity-filter" data-target-entry-types="transition" checked>
+							<input type="checkbox" name="transitions" data-role="ibo-activity-panel--filter" data-target-entry-types="transition" checked>
 							{{ 'UI:Layout:ActivityPanel:Tab:Activity:Toolbar:TransitionsFilter:Title'|dict_s }}
 						</label>
 					{% endif %}
 					<label class="ibo-activity-panel--tab-toolbar-action"
 					       data-tooltip-content="{{ 'UI:Layout:ActivityPanel:Tab:Activity:Toolbar:EditsFilter:Tooltip'|dict_s }}">
-						<input type="checkbox" name="edits" data-role="ibo-activity-panel--activity-filter" data-target-entry-types="edits" checked>
+						<input type="checkbox" name="edits" data-role="ibo-activity-panel--filter" data-target-entry-types="edits" checked>
 						{{ 'UI:Layout:ActivityPanel:Tab:Activity:Toolbar:EditsFilter:Title'|dict_s }}
 					</label>
 				</div>
