N°3535 Migrate dashboard editor modal to new design

--- a/css/backoffice/components/input/_all.scss
+++ b/css/backoffice/components/input/_all.scss
@@ -5,8 +5,11 @@
 
 @import "input";
 @import "input-select";
+@import "input-checkbox";
 @import "input-date";
 @import "input-datetime";
 @import "input-duration";
+@import "input-select-icon";
 @import "input-string";
 @import "input-tagset";
+@import "input-textarea";
