--- a/css/backoffice/layout/dashboard/_all.scss
+++ b/css/backoffice/layout/dashboard/_all.scss
@@ -16,20 +16,5 @@
  * You should have received a copy of the GNU Affero General Public License
  */
 
-@import "navigation-menu";
-@import "top-bar";
-@import "content";
-@import "tab-container/tab-container";
-@import "tab-container/tab";
-@import "multi-column/multi-column";
-@import "multi-column/column";
-@import "dashboard/all";
-@import "wizard-container/wizard-container";
-@import "object-details";
-@import "activity-panel/activity-panel";
-@import "activity-panel/activity-entry";
-@import "activity-panel/caselog-entry";
-@import "activity-panel/edits-entry";
-@import "activity-panel/transition-entry";
-@import "activity-panel/caselog-entry-form";
-@import "blocks-integrations/panel-with-tab-container";
+@import "dashboard";
+@import "dashboard-editor";
